--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport-jwt": "^4.0.1",
     "pdfkit": "^0.17.2",
     "pg": "^8.18.0",
+    "puppeteer": "^24.37.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger": "^0.7.5",
